# RTLzz

./: .gitignore  CMakeLists.txt  README.md  index.ai.md  roadmap.md
backend/: CMakeLists.txt
backend/src/: BackendIR.cpp  BackendIR.h  JsonParser.cpp  JsonParser.h  PredicateJsonLoader.cpp  PredicateJsonLoader.h  main.cpp
docs/: THIRD_PARTY_NOTICES.md
gui/RTLzz.Gui/: MainForm.Designer.cs  MainForm.cs  Program.cs  RTLzz.Gui.csproj  app.manifest
gui/RTLzz.Gui.Tests/: Program.cs  RTLzz.Gui.Tests.csproj
gui/RTLzz.Gui/Models/: GenerationRequest.cs  GenerationResult.cs  GuiSettings.cs  OutputFormat.cs
gui/RTLzz.Gui/Services/: OutputPathService.cs  PredicateExpandLocator.cs  PredicateExpandRunner.cs  RequestValidator.cs  SettingsService.cs  TemporarySourceService.cs
main/: main.cpp
scripts/: analyze_backend_ir.py  build_debug.ps1  build_release.ps1  check_env.ps1  check_no_unsafe_lowering.ps1  check_release_privacy.ps1  ci_strict.ps1  ci_strict.sh  configure_vs2026.ps1  differential_listjson.py  differential_rtl.py  generate_fixture_listjson.sh  publish_customer.ps1  publish_gui.ps1  run_real_case.ps1  test_all.ps1  test_customer_files.ps1  test_gui.ps1  test_portable_release.ps1  test_real_vul_outputs.ps1  test_smt_solver.ps1  verify_real_vul_outputs.ps1
src/: main.cpp  rtlzz.hpp
src/ast/: AST.h  ASTBuilder.cpp  ASTBuilder.h  ASTBuilderDriver.cpp  VulOpRecognizer.cpp  VulOpRecognizer.h  VulTypeRecognizer.cpp  VulTypeRecognizer.h
src/backend/: beir.cpp  beir.hpp  beopt.cpp  beopt.hpp  beopt_algebraic.hpp  beopt_assign_chains.hpp  beopt_bitvalue.hpp  beopt_constant.hpp  beopt_cse.hpp  beopt_dce.hpp  beopt_predicate.hpp  beopt_width.hpp  rtlgen.cpp  rtlgen.hpp
src/debug/: DebugLoc.h  RTLZZException.cpp  RTLZZException.h
src/emitter/: JsonEmitter.cpp  JsonEmitter.h  ListJsonEmitter.cpp  ListJsonEmitter.h  SmtEmitter.cpp  SmtEmitter.h  TextEmitter.cpp  TextEmitter.h
src/eval/: PredicateEvaluator.cpp  PredicateEvaluator.h
src/ir/: CFG.cpp  CFG.h  CanonicalIR.cpp  CanonicalIR.h  IRLValue.h  IRNode.h  IRType.h  IRValue.h  SSA.cpp  SSA.h  TypedDAG.cpp  TypedDAG.h
src/normalize/: AliasLowering.cpp  ArrayScalarize.cpp  AssignmentLowering.cpp  DefaultTotalizationPass.cpp  FunctionInline.cpp  IntOpLowering.cpp  LambdaInline.cpp  LookupLowering.cpp  NormalizeDriver.cpp  NormalizeUtils.h  StructFlatten.cpp
src/pipeline/: Stages.cpp  Stages.h
src/pipelinev2/: PipelineV2.cpp  PipelineV2.h
src/predicate/: DefaultTotalizationPass.cpp  DefaultTotalizationPass.h  OutputExpressionMap.cpp  OutputExpressionMap.h  PredicateIR.h  PredicateVerifier.cpp  PredicateVerifier.h
src/s0ast/: S0AST.cpp  S0AST.h  S0NativeASTBuilder.cpp  S0NativeASTBuilder.h  S0VulOpRecognizer.cpp  S0VulRecognizers.h  S0VulTypeRecognizer.cpp  checklist.md  checklist_0.md  checklist_1.md  checklist_2.md  checklist_3.md  checklist_4.md  checklist_5.md
src/s10predicate/: S10Predicate.cpp  S10Predicate.h  checklist.md
src/s11beir/: S11BEIR.cpp  S11BEIR.h  checklist.md
src/s1apinorm/: S1APINorm.cpp  S1APINorm.h  S1NormedAST.h
src/s2validate/: S2Validate.cpp  S2Validate.h  checklist.md
src/s3statementize/: S3Statementize.cpp  S3Statementize.h  checklist.md
src/s4cfg/: S4CFG.cpp  S4CFG.h  S4LowerFunctionExits.cpp  checklist.md
src/s5unroll/: S5Unroll.cpp  S5Unroll.h  checklist.md
src/s6inline/: S6Inline.cpp  S6Inline.h  checklist.md
src/s7flatten/: S7Flatten.cpp  S7Flatten.h  checklist.md
src/s8opnorm/: S8Norm.cpp  S8Norm.h  checklist.md
src/s9ssa/: S9SSA.cpp  S9SSA.h  checklist.md
src/semantics/: AliasGraph.cpp  AliasGraph.h  IntSemantics.cpp  IntSemantics.h
src/transform/: LoopUnroll.cpp  LoopUnroll.h  Normalize.cpp  Normalize.h  Predicate.cpp  Predicate.h
src/v2/: V2AST.h  V2Types.h
tests/differential/uint_semantics/: uint_oracle.cpp
tests/e2e/: test_e2e.cpp
tests/final/: top.logic.cpp
tests/final/prodcon/: cons.logic.cpp  prod.logic.cpp
tests/final/rv64ima5/: core.logic.cpp  dec.logic.cpp  exu.logic.cpp  rf.logic.cpp  top.logic.cpp
tests/fixtures/: array_flatten.logic.cpp  array_inline_mix.logic.cpp  beopt_bitvalue.logic.cpp  branch_output_semantics.logic.cpp  child_response_payload_default.logic.cpp  constant_sext.logic.cpp  constant_width_context.logic.cpp  control_predication.logic.cpp  default_totalization.logic.cpp  dynamic_bounds.logic.cpp  enum_lowering.logic.cpp  helper_inline.logic.cpp  helper_return_complex.logic.cpp  int_basic.logic.cpp  int_concat_repeat.logic.cpp  int_range.logic.cpp  int_to_std.logic.cpp  int_uint_corner.logic.cpp  lambda_inline.logic.cpp  lookup_table.logic.cpp  output_prefix_collision.logic.cpp  output_ref_direction.logic.cpp  param_directions.logic.cpp  predicate_sinking.logic.cpp  regproxy_dynamic_array_index.logic.cpp  reqhelper_output_policy.logic.cpp  sa8_1.logic.cpp  semantic_default_policy.logic.cpp  struct_aggregate_init.logic.cpp  struct_array_composite.logic.cpp  struct_field_inline.logic.cpp  struct_ref.logic.cpp  symbol_category.logic.cpp  write_enable_default_false.logic.cpp
tests/fixtures/negative/: local_uninitialized_read_error.logic.cpp  name_heuristic_invalid_count_error.logic.cpp  output_param_inout.logic.cpp  param_directions.logic.cpp  queue_proxy_conditional_payload.logic.cpp
tests/support/: vul_uint.hpp
tests/unit/: test_basic.cpp
testv2/: s10predicate_test.cpp  s11beir_test.cpp  s1apinorm_test.cpp  s2validate_test.cpp  s3statementize_test.cpp  s4cfg_integration_test.cpp  s4cfg_test.cpp  s5unroll_integration_test.cpp  s5unroll_test.cpp  s6inline_test.cpp  s7flatten_test.cpp  s8opnorm_test.cpp  s9ssa_test.cpp
testv2/fixtures/: controlflow_misc.logic.cpp  flatten_misc.logic.cpp  inline_misc.logic.cpp  int_misc.logic.cpp
testv2/fixtures/s11beir/: source_array_ports.logic.cpp
testv2/fixtures/s1apinorm/: source_aggregate_decl_init.logic.cpp  source_at.logic.cpp  source_pick.logic.cpp
testv2/fixtures/s2validate/: illegal_duplicate_pragma.logic.cpp  illegal_initialized_port.logic.cpp  illegal_legacy_proxy.logic.cpp  illegal_missing_global.logic.cpp  illegal_parameter_top.logic.cpp  legal_basic.logic.cpp  (+5 more)
(+15 files in other folders)
